# yuansheng-kit

./: .editorconfig  .envrc  .gitignore  AGENTS.md  LICENSE  biome.json  bun.nix  devshell.toml  flake.nix  package.json  prek.toml  ruff.toml  treefmt.toml  tsconfig.json
.agents/skills/python-coding/: SKILL.md
.agents/skills/typescript-coding/: SKILL.md
.github/: settings.yml
contracts/yuansheng-root-cause-blueprint/v1-lite/: README.md  schema.json
docs/: CONTRIBUTING.md  README.md
plugins/craft/: plugin.config.ts
plugins/craft/agents/: ys-craft-delivery-coordinator.md  ys-craft-patch-builder.md  (+5 more)
plugins/trace/: manifest.json  plugin.config.ts
plugins/trace/tools/perf-data-validator/: README.md  pyproject.toml  requirements.txt
plugins/trace/tools/perf-data-validator/src/perf_data_validator/: __init__.py  __main__.py  cli.py  paths.py  probe.py  report_types.py  validation.py
plugins/trace/tools/perf-data-validator/tests/: test_reference_runtime.py  test_validator.py
plugins/trace/tools/perf-data-validator/tests/golden/: openblas-dgemv-report-v1.json
tests/craft/: agent-resources.test.ts  artifact.test.ts  blueprint-import.test.ts  building.test.ts  contract-fixtures.ts  contracts.test.ts  local-verification.test.ts  repository-preflight.test.ts  review-delivery.test.ts  runtime-config.test.ts  sealed-blueprint-fixture.ts  state-machine.test.ts  store.test.ts  tool-surface.test.ts
tests/trace/: architecture-boundaries.test.ts  plugin-builder.test.ts
tools/plugin-builder/: package.json
tools/yuansheng-root-cause-blueprint/: generate.ts
(+125 files in other folders)
