[project]
name = "perf-data-validator"
version = "0.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "rfc8785==0.1.4",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.14"
strict = true
files = [
  "tests",
]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
testpaths = [
  "tests",
]
