[project]
name = "perf-data-validator"
version = "0.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
  "rfc8785==0.1.4",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.14"
strict = true
files = [
  "src",
  "tests",
]

[[tool.mypy.overrides]]
module = [
  "pytest",
  "rfc8785",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "test_validator",
]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
